tests/parser_cases/invalid/if_call_condition.ob0
MODULE Main;
BEGIN
  IF WriteInt(1 THEN
    WriteInt(2)
  END
END Main.
